# cdd-storage

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  README.md  README.md-E  TODO_PLAN.md  alpine.Dockerfile  debian.Dockerfile
.github/workflows/: ci.yml
scripts/: update_shields.sh
src/: api.rs  error.rs  main.rs  storage.rs
