[package]
name = "cdd-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
derive_more = { version = "2.1.1", features = ["full"] }
httpdate = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.11.0"
tokio = { version = "1.52.3", features = ["fs", "rt", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
